--- a/Academy.Web/Views/Shared/_LayoutHome.cshtml
+++ b/Academy.Web/Views/Shared/_LayoutHome.cshtml
@@ -5,9 +5,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Theme Starz">
+    <title>Universo - Educational, Course and University Template</title>
 
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-    <link href="assets/css/font-awesome.css" rel="stylesheet" type="text/css">
+    <link href="~/assets/css/font-awesome.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="~/assets/bootstrap/css/bootstrap.css" type="text/css">
     <link rel="stylesheet" href="~/assets/css/selectize.css" type="text/css">
     <link rel="stylesheet" href="~/assets/css/owl.carousel.css" type="text/css">
@@ -15,9 +16,6 @@
     <link rel="stylesheet" href="~/assets/css/vanillabox/vanillabox.css" type="text/css">
 
     <link rel="stylesheet" href="~/assets/css/style.css" type="text/css">
-
-    <title>Universo - Educational, Course and University Template</title>
-
 </head>
 
 <body class="page-homepage-carousel">
@@ -28,18 +26,7 @@
             <div class="secondary-navigation-wrapper">
                 <div class="container">
                     <div class="navigation-contact pull-left">Call Us:  <span class="opacity-70">000-123-456-789</span></div>
-                    <div class="search">
-                        <div class="input-group">
-                            <input type="search" class="form-control" name="search" placeholder="Search">
-                            <span class="input-group-btn"><button type="submit" id="search-submit" class="btn"><i class="fa fa-search"></i></button></span>
-                        </div><!-- /.input-group -->
-                    </div>
-                    <ul class="secondary-navigation list-unstyled">
-                        <li><a href="#">Prospective Students</a></li>
-                        <li><a href="#">Current Students</a></li>
-                        <li><a href="#">Faculty & Staff</a></li>
-                        <li><a href="#">Alumni</a></li>
-                    </ul>
+                   
                 </div>
             </div><!-- /.secondary-navigation -->
             <div class="primary-navigation-wrapper">
@@ -53,66 +40,36 @@
                                 <span class="icon-bar"></span>
                             </button>
                             <div class="navbar-brand nav" id="brand">
-                                <a href="index.html"><img src="assets/img/logo.png" alt="brand"></a>
+                                <a asp-controller="Home" asp-action="Index"><img src="~/assets/img/logo.png" alt="brand"></a>
                             </div>
                         </div>
                         <nav class="collapse navbar-collapse bs-navbar-collapse navbar-right" role="navigation">
                             <ul class="nav navbar-nav">
                                 <li class="active">
-                                    <a href="#" class="has-child no-link">Home</a>
-                                    <ul class="list-unstyled child-navigation">
-                                        <li><a href="index.html">Homepage Education</a></li>
-                                        <li><a href="homepage-courses.html">Homepage Courses</a></li>
-                                        <li><a href="homepage-events.html">Homepage Events</a></li>
-                                    </ul>
+                                    <a href="#">Home</a>
                                 </li>
                                 <li>
-                                    <a href="#" class=" has-child no-link">Courses</a>
-                                    <ul class="list-unstyled child-navigation">
-                                        <li><a href="course-landing-page.html">Course Landing Page</a></li>
-                                        <li><a href="course-listing.html">Course Listing</a></li>
-                                        <li><a href="course-listing-images.html">Course Listing with Images</a></li>
-                                        <li><a href="course-detail-v1.html">Course Detail v1</a></li>
-                                        <li><a href="course-detail-v2.html">Course Detail v2</a></li>
-                                        <li><a href="course-detail-v3.html">Course Detail v3</a></li>
-                                    </ul>
+                                    <a href="#">Training</a>
+                                </li>
+                                @*<li>
+                                        <a href="#" class=" has-child no-link">Courses</a>
+                                        <ul class="list-unstyled child-navigation">
+                                            <li><a href="course-landing-page.html">Course Landing Page</a></li>
+                                            <li><a href="course-listing.html">Course Listing</a></li>
+                                            <li><a href="course-listing-images.html">Course Listing with Images</a></li>
+                                            <li><a href="course-detail-v1.html">Course Detail v1</a></li>
+                                            <li><a href="course-detail-v2.html">Course Detail v2</a></li>
+                                            <li><a href="course-detail-v3.html">Course Detail v3</a></li>
+                                        </ul>
+                                    </li>*@
+                                <li>
+                                    <a asp-controller="Home" asp-action="AboutUs">About Us</a>
                                 </li>
                                 <li>
-                                    <a href="#" class="has-child no-link">Events</a>
-                                    <ul class="list-unstyled child-navigation">
-                                        <li><a href="event-listing-images.html">Events Listing with images</a></li>
-                                        <li><a href="event-listing.html">Events Listing</a></li>
-                                        <li><a href="event-grid.html">Events Grid</a></li>
-                                        <li><a href="event-detail.html">Event Detail</a></li>
-                                        <li><a href="event-calendar.html">Events Calendar</a></li>
-                                    </ul>
+                                    <a asp-controller="Home" asp-action="ContactUs">Contact Us</a>
                                 </li>
                                 <li>
-                                    <a href="about-us.html">About Us</a>
-                                </li>
-                                <li>
-                                    <a href="#" class="has-child no-link">Blog</a>
-                                    <ul class="list-unstyled child-navigation">
-                                        <li><a href="blog-listing.html">Blog listing</a></li>
-                                        <li><a href="blog-detail.html">Blog Detail</a></li>
-                                    </ul>
-                                </li>
-                                <li>
-                                    <a href="#" class="has-child no-link">Pages</a>
-                                    <ul class="list-unstyled child-navigation">
-                                        <li><a href="full-width.html">Fullwidth</a></li>
-                                        <li><a href="left-sidebar.html">Left Sidebar</a></li>
-                                        <li><a href="right-sidebar.html">Right Sidebar</a></li>
-                                        <li><a href="microsite.html">Microsite</a></li>
-                                        <li><a href="my-account.html">My Account</a></li>
-                                        <li><a href="members.html">Members</a></li>
-                                        <li><a href="member-detail.html">Member Detail</a></li>
-                                        <li><a href="register-sign-in.html">Register & Sign In</a></li>
-                                        <li><a href="shortcodes.html">Shortcodes</a></li>
-                                    </ul>
-                                </li>
-                                <li>
-                                    <a href="contact-us.html">Contact Us</a>
+                                    <a href="#">Sign In</a>
                                 </li>
                             </ul>
                         </nav><!-- /.navbar collapse-->
@@ -120,13 +77,13 @@
                 </header><!-- /.navbar -->
             </div><!-- /.primary-navigation -->
             <div class="background">
-                <img src="assets/img/background-city.png" alt="background">
+                <img src="~/assets/img/background-city.png" alt="background">
             </div>
         </div>
         <!-- end Header -->
         <!-- Page Content -->
         <div id="page-content">
-           @RenderBody()
+            @RenderBody()
         </div>
         <!-- end Page Content -->
         <!-- Footer -->
@@ -160,7 +117,7 @@
                     <div class="row">
                         <div class="col-md-3 col-sm-12">
                             <aside class="logo">
-                                <img src="assets/img/logo-white.png" class="vertical-center">
+                                <img src="~/assets/img/logo-white.png" class="vertical-center">
                             </aside>
                         </div><!-- /.col-md-3 -->
                         <div class="col-md-3 col-sm-4">
@@ -207,7 +164,7 @@
                         </div><!-- /.col-md-3 -->
                     </div><!-- /.row -->
                 </div><!-- /.container -->
-                <div class="background"><img src="assets/img/background-city.png" class="" alt=""></div>
+                <div class="background"><img src="~/assets/img/background-city.png" class="" alt=""></div>
             </section><!-- /#footer-content -->
 
             <section id="footer-bottom">
