Adding more pages and adjusting layout

--- a/Academy.Web/Views/Shared/_LayoutHome.cshtml
+++ b/Academy.Web/Views/Shared/_LayoutHome.cshtml
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="~/assets/css/style.css" type="text/css">
 </head>
 
-<body class="page-homepage-carousel">
+<body class="page-sub-page page-course-listing-images">
     <!-- Wrapper -->
     <div class="wrapper">
         <!-- Header -->
@@ -26,7 +26,7 @@
             <div class="secondary-navigation-wrapper">
                 <div class="container">
                     <div class="navigation-contact pull-left">Call Us:  <span class="opacity-70">000-123-456-789</span></div>
-                   
+
                 </div>
             </div><!-- /.secondary-navigation -->
             <div class="primary-navigation-wrapper">
@@ -49,19 +49,19 @@
                                     <a href="#">Home</a>
                                 </li>
                                 <li>
-                                    <a href="#">Training</a>
+                                    <a asp-controller="Home" asp-action="Training">Training</a>
                                 </li>
                                 @*<li>
-                                        <a href="#" class=" has-child no-link">Courses</a>
-                                        <ul class="list-unstyled child-navigation">
-                                            <li><a href="course-landing-page.html">Course Landing Page</a></li>
-                                            <li><a href="course-listing.html">Course Listing</a></li>
-                                            <li><a href="course-listing-images.html">Course Listing with Images</a></li>
-                                            <li><a href="course-detail-v1.html">Course Detail v1</a></li>
-                                            <li><a href="course-detail-v2.html">Course Detail v2</a></li>
-                                            <li><a href="course-detail-v3.html">Course Detail v3</a></li>
-                                        </ul>
-                                    </li>*@
+                                    <a href="#" class=" has-child no-link">Courses</a>
+                                    <ul class="list-unstyled child-navigation">
+                                        <li><a href="course-landing-page.html">Course Landing Page</a></li>
+                                        <li><a href="course-listing.html">Course Listing</a></li>
+                                        <li><a href="course-listing-images.html">Course Listing with Images</a></li>
+                                        <li><a href="course-detail-v1.html">Course Detail v1</a></li>
+                                        <li><a href="course-detail-v2.html">Course Detail v2</a></li>
+                                        <li><a href="course-detail-v3.html">Course Detail v3</a></li>
+                                    </ul>
+                                </li>*@
                                 <li>
                                     <a asp-controller="Home" asp-action="AboutUs">About Us</a>
                                 </li>
@@ -69,7 +69,8 @@
                                     <a asp-controller="Home" asp-action="ContactUs">Contact Us</a>
                                 </li>
                                 <li>
-                                    <a href="#">Sign In</a>
+                                    @*<a asp-area="Identity" asp-page="/Account/Login">Sign In</a>*@
+                                    <a asp-controller="Home" asp-action="SignIn">Sign In</a>
                                 </li>
                             </ul>
                         </nav><!-- /.navbar collapse-->
@@ -81,11 +82,9 @@
             </div>
         </div>
         <!-- end Header -->
-        <!-- Page Content -->
-        <div id="page-content">
-            @RenderBody()
-        </div>
-        <!-- end Page Content -->
+
+        @RenderBody()
+
         <!-- Footer -->
         <footer id="page-footer">
             <section id="footer-top">
@@ -151,7 +150,9 @@
                         </div><!-- /.col-md-3 -->
                         <div class="col-md-3 col-sm-4">
                             <aside>
-                                <header><h4>About Universo</h4></header>
+                                <header>
+                                    <h4>About Universo</h4>
+                                </header>
                                 <p>
                                     Aliquam feugiat turpis quis felis adipiscing, non pulvinar odio lacinia.
                                     Aliquam elementum pharetra fringilla. Duis blandit, sapien in semper vehicula,
