--- a/Academy.Web/Views/Home/Index.cshtml
+++ b/Academy.Web/Views/Home/Index.cshtml
@@ -146,12 +146,12 @@
             <div class="col-md-4 col-sm-12">
                 <section id="about">
                     <header>
-                        <h2>About Universo</h2>
+                        <h2>About IPC Academy</h2>
                     </header>
                     <div class="section-content">
                         <img src="~/assets/img/students.jpg" alt="" class="add-margin">
                         <p>
-                            <strong>Welcome o Universo.</strong> Premium HTML Template for schools, universieties and other educational institutes.
+                            <strong>Welcome o IPC Academy.</strong> Premium HTML Template for schools, universieties and other educational institutes.
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec laoreet semper tincidunt.
                             Interdum et malesuada fames ac ante ipsum primis in faucibus.
                         </p>
@@ -474,7 +474,7 @@
                     </header>
                     <div class="section-content">
                         <a href="" class="universal-button">
-                            <h3>Support the University of Universo!</h3>
+                            <h3>Support the IPC Academy!</h3>
                             <figure class="date"><i class="fa fa-arrow-right"></i></figure>
                         </a>
                     </div><!-- /.section-content -->
