--- a/Academy.Web/Views/Shared/_LayoutHome.cshtml
+++ b/Academy.Web/Views/Shared/_LayoutHome.cshtml
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Theme Starz">
-    <title>Universo - Educational, Course and University Template</title>
+    <title>IPC - Educational, Course and University Template</title>
 
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link href="~/assets/css/font-awesome.css" rel="stylesheet" type="text/css">
@@ -40,7 +40,7 @@
                                 <span class="icon-bar"></span>
                             </button>
                             <div class="navbar-brand nav" id="brand">
-                                <a asp-controller="Home" asp-action="Index"><img src="~/assets/img/logo.png" alt="brand"></a>
+                                <a asp-controller="Home" asp-action="Index"><img src="~/assets/img/ipcLogo.jpg" alt="brand"></a>
                             </div>
                         </div>
                         <nav class="collapse navbar-collapse bs-navbar-collapse navbar-right" role="navigation">
@@ -116,14 +116,14 @@
                     <div class="row">
                         <div class="col-md-3 col-sm-12">
                             <aside class="logo">
-                                <img src="~/assets/img/logo-white.png" class="vertical-center">
+                                <img src="~/assets/img/ipcLogo.jpg" class="vertical-center" width="20">
                             </aside>
                         </div><!-- /.col-md-3 -->
                         <div class="col-md-3 col-sm-4">
                             <aside>
                                 <header><h4>Contact Us</h4></header>
                                 <address>
-                                    <strong>University of Universo</strong>
+                                    <strong>IPC</strong>
                                     <br>
                                     <span>4877 Spruce Drive</span>
                                     <br><br>
@@ -151,7 +151,7 @@
                         <div class="col-md-3 col-sm-4">
                             <aside>
                                 <header>
-                                    <h4>About Universo</h4>
+                                    <h4>About IPC</h4>
                                 </header>
                                 <p>
                                     Aliquam feugiat turpis quis felis adipiscing, non pulvinar odio lacinia.
